<resources>
    <string name="app_name">Edit Profile</string>


    <string name="STR_NO_INTERNET_CONNECTIVITY">It looks like you are not connected to the internet. Please check your internet settings and try again.</string>

    <string name="STR_NAME_REQUIRED">Name is required</string>
    <string name="STR_VALID_EMAIL_REQUIRED">Valid email is required</string>
    <string name="ERROR_INVALID_EMAIL_REGISTER">Email address invalid</string>
    <string name="STR_PASSWORD_REQUIRED">Password is required</string>

    <string name="ERROR_PASSWORD_LENGTH" translatable="false">Password should be at least 3 characters</string>
    <string name="ERROR_PASSWORD_MISMATCH">Confirm password does not match</string>
    <string name="STR_MOBILE_REQUIRED">Mobile number is required</string>
    <string name="STR_ERROR_INVALID_PHONE">Phone number format invalid</string>


    <string name="STR_NAME">Name</string>
    <string name="EMAIL_STR">Email</string>
    <string name="STR_MOBILE_HINT_REGISTER">Mobile</string>
    <string name="STR_PHONE_HINT_REGISTER">Phone</string>
    <string name="STR_PASS_HINT">Password</string>
    <string name="STR_CONFIRM_PASS_HINT">Confirm Password</string>
    <string name="STR_USER_LOGIN">User Login Options</string>

    <string name="STR_SIGNIN">Sign In </string>
    <string name="STR_OR">OR</string>
    <string name="STR_LOGIN_GOOGLE">Login with Google</string>
    <string name="STR_UPDATE_USER_PROFILE">Update User Profile</string>
    <string name="STR_UPDATE_PASSWORD">Update Password</string>
    <string name="STR_UPDATE_EMAIL">Update Email</string>

    <string name="STR_UPDATE_PROFILE">UPDATE PROFILE</string>


    <string name="STR_UPDATE_USER_PROFILE_SUCCESS">User Profile update successfully</string>
    <string name="STR_UPDATE_USER_PASSWORD_SUCCESS">User Password update successfully</string>
    <string name="STR_UPDATE_USER_EMAIL_SUCCESS">User Email update successfully</string>


</resources>
