<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".3" />


        <TextView
            android:id="@+id/txt_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/STR_USER_LOGIN"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_textinput"
            style="@style/TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/profile_setting_text_input_layout_top_margin"
            android:textColorHint="@color/white"
            app:hintTextAppearance="@style/LableTextAppearance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_lable">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edt_bg_selector"
                android:hint="@string/EMAIL_STR"
                android:inputType="textEmailAddress"
                android:minHeight="@dimen/_30sdp"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingTop="@dimen/profile_setting_edit_text_top_padding"
                android:paddingRight="@dimen/_5sdp"
                android:paddingBottom="@dimen/profile_setting_edit_text_top_padding"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/colorPrimary"
                android:textSize="@dimen/text_size_12" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_textinput"
            style="@style/TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/profile_setting_text_input_layout_top_margin"
            android:textColorHint="@color/white"
            app:hintTextAppearance="@style/LableTextAppearance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_textinput"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edt_bg_selector"
                android:hint="@string/STR_PASS_HINT"
                android:inputType="textPassword"
                android:minHeight="@dimen/_30sdp"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingTop="@dimen/profile_setting_edit_text_top_padding"
                android:paddingRight="@dimen/_5sdp"
                android:paddingBottom="@dimen/profile_setting_edit_text_top_padding"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_12" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/signin_btn"
            style="@style/RoundedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_22sdp"
            android:background="@drawable/signin_login_btn_bg"
            android:gravity="center"
            android:text="@string/STR_SIGNIN"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_12"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView12"
            app:layout_constraintEnd_toEndOf="@+id/password_textinput"
            app:layout_constraintStart_toStartOf="@+id/password_textinput"
            app:layout_constraintTop_toBottomOf="@+id/password_textinput" />


        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_18sdp"
            android:layout_marginBottom="@dimen/_18sdp"
            android:padding="@dimen/_4sdp"
            android:text="@string/STR_OR"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_12"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/fb_login_btn"
            app:layout_constraintEnd_toEndOf="@+id/signin_btn"
            app:layout_constraintStart_toStartOf="@+id/signin_btn"
            app:layout_constraintTop_toBottomOf="@+id/signin_btn" />
        <LinearLayout
            android:id="@+id/fb_login_btn"
            style="@style/RoundedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:background="@drawable/fb_btn_bg"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/signin_btn"
            app:layout_constraintStart_toStartOf="@+id/signin_btn"
            app:layout_constraintTop_toBottomOf="@+id/textView12">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:drawableStart='@{@drawable/ic_facebook_icon}'
                android:text="@string/login_fb_str"
                android:drawablePadding="@dimen/_5sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_12"
                android:textStyle="bold" />
        </LinearLayout>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelinebottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".3" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>